successfully adding users to db on front end

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     DECENT
     <div id="root"></div>
-        <script src="bundle.js"></script>
+        <script src="/build/bundle.js"></script>
 </body>
 </html>
