--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    DECENT
+    YOTE
     <div id="root"></div>
         <script src="/build/bundle.js"></script>
 </body>
