--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
