--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    YOTE
+    <div id='title'>
+         <h1>YOTE</h1> 
+    </div>
+    
     <div id="root"></div>
         <script src="/build/bundle.js"></script>
 </body>
